Renaming triggered branch from master to main

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -3,9 +3,9 @@ name: Deployment
 # Triggers action
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
   workflow_dispatch:
 
