--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,41 +13,47 @@ jobs:
   build-images:
     runs-on: ubuntu-latest
 
-    steps:
-      # Create Docker front image
-      - uses: jerray/publish-docker-action@master
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          registry: index.docker.io/v1/
-          repository: pyrrha/pfa-front
-          auto_tag: true
-
-  deploy-staging:
-    runs-on: ubuntu-latest
 
     steps:
-      # Check-out repository
-      - uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-      
-      # Deploy docker-compose file
-      - name: Deploy docker-compose file
-        uses: easingthemes/ssh-deploy@v2.1.4
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
-          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-          REMOTE_USER: ${{ secrets.REMOTE_USER }}
-          REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
-          TARGET: ${{ secrets.REMOTE_TARGET }}/pfa.yml
-          SOURCE: "docker-compose.yml"
+    - name: Docker login
+      env:
+        DOCKER_USER: ${{ secrets.DOCKER_USER }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      run: docker login -u DOCKER_USER -p DOCKER_PASSWORD
 
-      # Apply docker-compose configuration
-      - name: Apply docker-compose configuration
-        uses: garygrossgarten/github-action-ssh@release
-        with:
-          command: cd ${{ secrets.REMOTE_TARGET }} && docker stack deploy -c pfa.yml pfa
-          host: ${{ secrets.REMOTE_HOST }}
-          username: ${{ secrets.REMOTE_USER }}
-          privateKey: ${{ secrets.SERVER_SSH_KEY }}
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USER }}/pfa-front:$(date +%s)
 
+    - name: Push the Docker image
+      run: docker push ${{ secrets.DOCKER_USER }}/pfa-front
+
+#   deploy-staging:
+#     runs-on: ubuntu-latest
+# 
+#     steps:
+#       # Check-out repository
+#       - uses: actions/checkout@v2
+# 
+#       
+#       # Deploy docker-compose file
+#       - name: Deploy docker-compose file
+#         uses: easingthemes/ssh-deploy@v2.1.4
+#         env:
+#           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+#           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+#           REMOTE_USER: ${{ secrets.REMOTE_USER }}
+#           REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
+#           TARGET: ${{ secrets.REMOTE_TARGET }}/pfa.yml
+#           SOURCE: "docker-compose.yml"
+# 
+#       # Apply docker-compose configuration
+#       - name: Apply docker-compose configuration
+#         uses: garygrossgarten/github-action-ssh@release
+#         with:
+#           command: cd ${{ secrets.REMOTE_TARGET }} && docker stack deploy -c pfa.yml pfa
+#           host: ${{ secrets.REMOTE_HOST }}
+#           username: ${{ secrets.REMOTE_USER }}
+#           privateKey: ${{ secrets.SERVER_SSH_KEY }}
+# 
