Removing file specification

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -24,7 +24,7 @@ jobs:
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
 
     - name: Build the Docker image
-      run: cd front/ && docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USER }}/pfa-front:$(date +%s)
+      run: cd front/ && docker build . --tag ${{ secrets.DOCKER_USER }}/pfa-front:$(date +%s)
 
     - name: Push the Docker image
       run: docker push ${{ secrets.DOCKER_USER }}/pfa-front
