--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,13 @@ version: '3.9'
 services:
   # Frontend
   front:
-    image: nginx:latest
-    build:
-    volumes:
-      - ./front:/usr/share/nginx/html:ro
-      - ./nginx:/etc/nginx/sites-available/
+    image: pyrrha/pfa-front:latest
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.pfa.rule=Host(`$PFA_FRONT_END_URL`)"
       - "traefik.http.routers.pfa.entrypoints=websecure"
       - "traefik.http.routers.pfa.tls.certresolver=letsencrypt"
       - "traefik.http.services.pfa.loadbalancer.server.port=80"
-
 
 networks:
   srv:
