--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -24,6 +24,6 @@ RUN rm -rf /usr/share/nginx/html/*
 # Copy from the stahg 1
 COPY --from=builder /front/build /usr/share/nginx/html
 
-EXPOSE 3000 80
+EXPOSE 80
 
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
