Waiting for back image

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -50,7 +50,9 @@ jobs:
 
   deploy-staging:
     needs:
-      - build-images
+      - build-front-image
+      - build-back-image
+
     runs-on: ubuntu-latest
 
     steps:
