--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "snake-case": "^3.0.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
