--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-highlight.js": "^1.0.7",
     "react-scripts": "4.0.3",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
