--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "highlight.js": "^10.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-scripts": "4.0.3",
     "snake-case": "^3.0.4",
     "web-vitals": "^1.0.1"
   },
